WIP: trying to develop here

--- a/src/help.html
+++ b/src/help.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <title>
-            Articulated Model Help Menu
+            IF3260_Tugas2_K01_G19 Help Menu
         </title>
         <link rel="stylesheet" href="styles/index.css">
-        <link rel="icon" type="image/x-icon" href="/favicon.ico">
     </head>
     <body style="padding: 24px;">
         <h1>
