--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
             <label for="load">Load Model: </label>
             <input type="file" id="load" name="load" accept=".json" style="width: 10rem;">
 
+            <h3>Components</h3>
+            <div id="components-container"></div>
+
             <h3>Color</h3>
             <input type="color" id="color" name="color" value="#ffffff" style="margin-right: 2rem;">
 
