--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,7 @@
     </div>
     <script src="scripts/model.js"></script>
     <script src="scripts/object.js"></script>
+    <script src="scripts/model-tubes-3.js"></script>
     <script src="scripts/matrix.js"></script>
     <script src="scripts/shader.js"></script>
     <script src="scripts/utilities.js"></script>
