--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,7 @@
             </div>
         </div>
     </div>
+    <script src="scripts/ui.js"></script>
     <script src="scripts/model.js"></script>
     <script src="scripts/block.js"></script>
     <script src="scripts/object.js"></script>
