--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
             <h3>Model</h3>
             <input type="radio" id="dog" name="model" value="dog" checked>
             <label for="dog" style="margin-right: 2rem;">Dog</label>
+            <input type="radio" id="duck" name="model" value="duck">
+            <label for="duck" style="margin-right: 2rem;">Duck</label>
             <!-- TODO -->
             <label for="load">Load Model: </label>
             <input type="file" id="load" name="load" accept=".json" style="width: 10rem;">
