feat: created person model, fix: camera

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,8 @@
             <label for="dog" style="margin-right: 2rem;">Dog</label>
             <input type="radio" id="duck" name="model" value="duck">
             <label for="duck" style="margin-right: 2rem;">Duck</label>
+            <input type="radio" id="person" name="model" value="person">
+            <label for="person" style="margin-right: 2rem;">Person</label>
             <!-- TODO -->
             <label for="load">Load Model: </label>
             <input type="file" id="load" name="load" accept=".json" style="width: 10rem;">
