feat: platypus object

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
             <label for="duck" style="margin-right: 2rem;">Duck</label>
             <input type="radio" id="person" name="model" value="person">
             <label for="person" style="margin-right: 2rem;">Person</label>
+            <input type="radio" id="platypus" name="model" value="person">
+            <label for="platypus" style="margin-right: 2rem;">Platypus</label>
             <!-- TODO -->
             <label for="load">Load Model: </label>
             <input type="file" id="load" name="load" accept=".json" style="width: 10rem;">
