feat: add anim2

--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,8 @@
             <label for="none" style="margin-right: 2rem;">None</label>
             <input type="radio" id="anim1" name="animation" value="anim1">
             <label for="anim1" style="margin-right: 2rem;">Animation 1</label>
+            <input type="radio" id="anim2" name="animation" value="anim2">
+            <label for="anim2" style="margin-right: 2rem;">Animation 2</label>
 
             <div class="flex mt-1">
                 <div class="components-container-bg">
