--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
             <label for="anim1" style="margin-right: 2rem;">Animation 1</label>
             <input type="radio" id="anim2" name="animation" value="anim2">
             <label for="anim2" style="margin-right: 2rem;">Animation 2</label>
+            <input type="radio" id="anim3" name="animation" value="anim3">
+            <label for="anim3" style="margin-right: 2rem;">Animation 3</label>
 
             <div class="flex mt-1">
                 <div class="components-container-bg">
