fix: fix save component

--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,8 @@
 
             <div class="flex mt-1">
                 <div class="components-container-bg">
-                    <h3 style="margin-top: 0;">Components</h3>
-                    <div id="selected-component"></div>
+                    <h3 style="margin-top: 0; color:azure">Components</h3>
+                    <div id="selected-component" style="color:azure"></div>
                     <div id="components-container"></div>
                 </div>
 
