--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
     <script src="scripts/model.js"></script>
     <script src="scripts/block.js"></script>
     <script src="scripts/object.js"></script>
-    <script src="scripts/animation.js"></script>
+    <script src="../test/animation.js"></script>
     <script src="scripts/matrix.js"></script>
     <script src="scripts/shader.js"></script>
     <script src="scripts/utilities.js"></script>
